<resources>
    <string name="app_name">Home_work6_4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="playlist">playlist</string>
    <string name="count_of_videos">video series</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
    <string name="videos_series">%s video series</string>
    <string name="video_time">04:14</string>
    <string name="count_of_videos_series">%s videos series</string>
    <string name="playlist_videos_activity">Playlist</string>
    <string name="back_videos_activity">Back</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="download">Download</string>
    <string name="select_video_quality">Select video quality</string>
    <string name="_1080p">1080p</string>
    <string name="_720p">720p</string>
    <string name="_480p">480p</string>
    <string name="idk_what_you_want">Idk what you want</string>
</resources>