<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="288dp"
    android:layout_height="253dp">

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/select_video_quality"
        android:textColor="@color/video_youtube_title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RadioGroup
        android:id="@+id/rg_quality"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select">

        <RadioButton
            android:id="@+id/rb_1080p"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/noto_sans"
            style="@style/my_alert_dialog_checked"
            android:selectAllOnFocus="true"
            android:text="@string/_1080p" />

        <RadioButton
            android:id="@+id/rb_720p"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/_720p" />

        <RadioButton
            android:id="@+id/rb_480p"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/noto_sans"
            android:text="@string/_480p" />

    </RadioGroup>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_download"
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/ic_download_background_button"
        android:text="@string/download"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_quality" />

</androidx.constraintlayout.widget.ConstraintLayout>